register user without email

--- a/vj4/locale/en.yaml
+++ b/vj4/locale/en.yaml
@@ -79,3 +79,5 @@ page.problem_detail.sidebar.show_category: Click to Show
 setting_info_domain: Personal Info
 display_name: Display Name
 Can be Extended For: Extension
+register: Register
+
